[metadata]
name = raman
description = Tools to process Raman spectra
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  numpy
  xarray
  scipy
  pandas

[options.extras_require]
peakutils =
  peakutils
cvxpy =
  cvxpy